# uqphonon

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini  workflow_ti.py
src/petphonon/: __init__.py  _core.py  _ipi.py  _plot.py
src/uqphonon/: __init__.py  _core.py  _ipi.py  _plot.py
