[build-system]
requires = [
    "setuptools >= 77",
    "setuptools_scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "petphonon"
version = "0.1.0"
description = "Phonon bands with uncertainty quantification from MLIP ensembles"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "phonopy",
    "numpy",
    "matplotlib",
    "ipi",
]

[project.optional-dependencies]
dev = ["tox", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort
